# clion-bug-24777

./: .gitignore  CMakeLists.txt  README.rst
include/: version.hpp
src/: main.cpp
